@@ -12,6 +12,14 @@ local function getSeasonalDungeons()
 	return events
 end
 
+local function getPvpByVersion()
+	local version, build, date, tocversion = GetBuildInfo()
+	if string.sub(version, 1, 2) ~= "1." then
+		return GBB.PvpNames
+	end
+	return GBB.PvpSodNames
+end
+
 function GBB.GetDungeonNames()
 	local DefaultEnGB={
 		["RFC"] = 	"Ragefire Chasm",
@@ -113,7 +121,9 @@ function GBB.GetDungeonNames()
 		["BAD"] =	"DEBUG BAD WORDS - REJECTED",
 		["BREW"] =  "Brewfest - Coren Direbrew",
 		["HOLLOW"] =  "Hallow's End - Headless Horseman",
-    ["TRAVEL"] = "Travel services - Summons/Portals",
+    	["TRAVEL"] = "Travel services - Summons/Portals",
+		["BLOOD"] = "Bloodmoon",
+		["INCUR"] = "Incursions",
 		}
 
 	local dungeonNamesLocales={
@@ -643,7 +653,7 @@ GBB.VanillaDungeonLevels ={
 	["LBRS"] = 	{55,60}, ["DME"] = 	{58,60}, ["DMN"] = 	{58,60}, ["DMW"] = 	{58,60}, ["STR"] = 	{58,60}, ["SCH"] = 	{58,60},
 	["UBRS"] = 	{58,60}, ["MC"] = 	{60,60}, ["ZG"] = 	{60,60}, ["AQ20"]= 	{60,60}, ["BWL"] = {60,60},
 	["AQ40"] = 	{60,60}, ["NAX"] = 	{60,60},
-	["MISC"]=   {0,100}, ["TRAVEL"]={0,100},
+	["MISC"]=   {0,100}, ["TRAVEL"]={0,100}, ["INCUR"]={0,100},
 	["DEBUG"] = {0,100}, ["BAD"] =	{0,100}, ["TRADE"]=	{0,100}, ["SM2"] =  {28,42}, ["DM2"] =	{58,60}, ["DEADMINES"]={18,23},
 }
 
@@ -654,7 +664,7 @@ GBB.PostTbcDungeonLevels = {
 	["LBRS"] = 	{54,60}, ["DME"] = 	{54,61}, ["DMN"] = 	{54,61}, ["DMW"] = 	{54,61}, ["STR"] = 	{56,61}, ["SCH"] = 	{56,61},
 	["UBRS"] = 	{53,61}, ["MC"] = 	{60,60}, ["ZG"] = 	{60,60}, ["AQ20"]= 	{60,60}, ["BWL"] = {60,60},
 	["AQ40"] = 	{60,60}, ["NAX"] = 	{60,60},
-	["MISC"] =  {0,100}, ["TRAVEL"]={0,100},
+	["MISC"] =  {0,100}, ["TRAVEL"]={0,100}, ["INCUR"]={0,100},
 	["DEBUG"] = {0,100}, ["BAD"] =	{0,100}, ["TRADE"]=	{0,100}, ["SM2"] =  {28,42}, ["DM2"] =	{58,60}, ["DEADMINES"]={16,24},
 }
 
@@ -669,6 +679,7 @@ GBB.TbcDungeonLevels = {
 
 GBB.PvpLevels = {
 	["WSG"] = 	{10,70}, ["AB"] = 	{20,70}, ["AV"] = 	{51,70},   ["WG"] = {80,80}, ["SOTA"] = {80,80},  ["EOTS"] =   {15,70},   ["ARENA"] = {70,80},
+	["BLOOD"] = {0,100},
 }
 
 GBB.WotlkDungeonLevels = {
@@ -704,7 +715,11 @@ GBB.PvpNames = {
 	"WSG", "AB", "AV", "EOTS", "WG", "SOTA", "ARENA",
 }
 
-GBB.Misc = {"MISC", "TRADE", "TRAVEL"}
+GBB.PvpSodNames = {
+	"WSG", "AB", "AV", "BLOOD",
+}
+
+GBB.Misc = {"MISC", "TRADE", "TRAVEL", "INCUR"}
 
 GBB.DebugNames = {
 	"DEBUG", "BAD", "NIL",
@@ -725,6 +740,7 @@ GBB.Seasonal = {
 
 GBB.SeasonalActiveEvents = {}
 GBB.Events = getSeasonalDungeons()
+GBB.PvpNames = getPvpByVersion()
 
 function GBB.GetRaids()
 	local arr = {}
