@@ -151,7 +151,9 @@ GBB.dungeonTagsLoc={
 		["BREW"] =  "brewfest brew coren dire direbrew beerfest",
 		["HOLLOW"] = "headless horseman hollow",
 		["TRADE"] = "buy buying sell selling wts wtb hitem henchant htrade enchanter", --hlink
-		["TRAVEL"] = "sum summ summon summons summoning port portal travel"
+		["TRAVEL"] = "sum summ summon summons summoning port portal travel",
+		["BLOOD"] = "blood bloodmoon",
+		["INCUR"] = "inc incur incursion incursions incurusions",
 	}),
 	deDE =langSplit({
 		["RFC"] = 	"rfa ragefireabgrund flammenschlund flamenschlund rf rfg" ,
